fix z-index

--- a/components/SectionIPFSCampPage.module.scss
+++ b/components/SectionIPFSCampPage.module.scss
@@ -15,7 +15,7 @@
   row-gap: 1rem;
   width: 55%;
   color: var(--text-white);
-  z-index: var(--z-index-large);
+  z-index: var(--z-index-medium);
 
   @media (max-width: 768px) {
     width: 100%;
@@ -47,7 +47,7 @@
 }
 
 .imageWrapper {
-  z-index: var(--z-index-large);
+  z-index: var(--z-index-medium);
   position: relative;
 }
 
@@ -57,7 +57,7 @@
   margin-bottom: 2rem;
 
   img {
-    z-index: var(--z-index-large);
+    z-index: var(--z-index-medium);
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -66,7 +66,7 @@
 
   @media (max-width: 768px) {
     img {
-      z-index: var(--z-index-large);
+      z-index: var(--z-index-medium);
       width: 100%;
       height: 100%;
     }
